--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 bytemuck = { version = "1.13.1", features = ["derive"] }
 cgmath = "0.18.0"
 env_logger = "0.10.0"
+lazy_static = "1.4.0"
 log = "0.4.19"
 pollster = "0.3.0"
 tobj = "4.0.0"
