--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,8 @@ edition = "2021"
 [dependencies]
 bytemuck = { version = "1.13.1", features = ["derive"] }
 cgmath = "0.18.0"
+egui = "0.22.0"
+egui-wgpu = "0.22.0"
 env_logger = "0.10.0"
 image = "0.24.6"
 lazy_static = "1.4.0"
