--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ bytemuck = { version = "1.13.1", features = ["derive"] }
 cgmath = "0.18.0"
 egui = "0.22.0"
 egui-wgpu = "0.22.0"
+egui-winit = "0.22.0"
 env_logger = "0.10.0"
 image = "0.24.6"
 lazy_static = "1.4.0"
